# ai-render

./: .gitignore  README.md  img2img.py  main.py  pyproject.toml  requirements.txt  text2img.py
ai_render/: config.py  main.py  testing.ipynb  ui.py
ai_render/config/: config.py
ai_render/core/: base_render_engine.py  cleanup.py  exporter.py  img2img.py  render_engine.py  render_from_image.py  render_from_text.py  render_thread.py  text2img.py
ai_render/houdini/managers/: image_manager.py
ai_render/houdini/python_panels/: airendermanager.pypanel
ai_render/houdini/widgets/: render_panel.py  resizing_text_edit.py
ai_render/python_panels/: airendermanager.pypanel
ai_render/render_manager/: render_panel.py  render_thread.py
utils/: imgs2gif.py
